Horizontal overflow bug fixed

--- a/_custom.scss
+++ b/_custom.scss
@@ -1,5 +1,9 @@
 /* For custom styles in project */
 
+body{
+  overflow-x: hidden;
+}
+
 .octocat{
   height: 20px;
   margin-bottom: -5px;
